export default {
  cereal: 'Céréales',
  legumes: 'Légumineuses',
  vegetable: 'Légumes',
  plantProtein: 'Protéines Végétales',
  condiment: 'Condiments',
  sauce: 'Sauces',
  meat: 'Viande',
  poultry: 'Volaille',
  fish: 'Poisson',
  seafood: 'Fruits de Mer',
  dairy: 'Produits Laitiers',
  cheese: 'Fromage',
  sugar: 'Sucre',
  spice: 'Épices',
  fruit: 'Fruits',
  oilAndFat: 'Huiles et Graisses',
  nutsAndSeeds: 'Noix et Graines',
  sweetener: 'Édulcorants',
  bread: 'Pain',
  baking: 'Pâtisserie',
  topping: 'Topping',
};
