...
  sugar: 'Sugar',
  spice: 'Spice',
  fruit: 'Fruit',
  oilAndFat: 'Oil and Fat',
  nutsAndSeeds: 'Nuts and Seeds',
  sweetener: 'Sweetener',
  bread: 'Bread',
  baking: 'Baking',
  topping: 'Topping',
};

