export default {
  language: 'Langue',
  theme: 'Thème',
  dark_mode: 'Mode Sombre',
  recipe_defaults: 'Paramètres par défaut des recettes',
  default_persons: 'Nombre de personnes par défaut',
  default_season_filter: 'Filtre de saison par défaut',
  edit_ingredient: "Modifier l'ingrédient",
  add_ingredient: 'Ajouter un ingrédient',
  ingredient_name: "Nom de l'ingrédient",
  ingredient_already_exists: 'Un ingrédient avec ce nom exact existe déjà dans la base de données',
  similar_ingredients_exist: 'Ingrédients similaires trouvés',
  type: 'Type',
  seasonality: 'Saisonnalité',
  edit_tag: "Modifier l'étiquette",
  add_tag: 'Ajouter une étiquette',
  tag_name: "Nom de l'étiquette",
  tag_already_exists: 'Une étiquette avec ce nom exact existe déjà dans la base de données',
  similar_tags_exist: 'Étiquettes similaires trouvées',
  about: 'À propos',
  version: 'Version',
  appearance: 'Apparence',
  data_management: 'Gestion des données',
  manage_ingredients_description: 'Modifier les ingrédients et leur saisonnalité',
  manage_tags_description: 'Gérer les étiquettes de recettes',
  updating_recipes: 'Mise à jour des recettes...',
  search_items: 'Rechercher...',
  ingredient_form_hint:
    'Le nom et le type sont requis. Plus vous renseignez de détails, meilleure sera votre expérience.',
  name_required: 'Le nom est requis.',
};
